Changed /user/valid to /user/me endpoint
